COLORS FIXED PLZ

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ h1{
 	font-weight: bold;
 	text-align: center;
 	padding-top: 200px;
-	color: white;
-	background-color: black;
+	color: #ffffff;
+	background-color: #000000;
 	
 }
