--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-	background-color: black;
+	background-color:;
 	color: white;
 }
 
@@ -9,5 +9,6 @@ h1{
 	text-align: center;
 	padding-top: 200px;
 	color: #ffffff;
-	background-color: black;
+	background-color:;
 }
+
