--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-	background-color:;
+	background-color: black;
 	color: white;
 }
 
@@ -7,8 +7,6 @@ h1{
 	font-family: Agency FB;
 	font-weight: bold;
 	text-align: center;
-	padding-top: 200px;
 	color: #ffffff;
-	background-color:;
 }
 
