--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,15 @@ body {
 	color: white;
 }
 
-IMG#logo {
+IMG.Falcons {
+	position: absolute;
+	top: 0px;
+	right: 400px;
+	width: 20px;
+	height: 30px;
+}
+
+IMG.logo {
 	text-align: center
 }
 
