--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 body {
-	background-color: black;
-	color: white;
+	background-image: http://cdn.wallpapersafari.com/46/49/OfQHDK.jpg("OfQHDK.jpg");
+	background-repeat: no-repeat;
+	color: black;
 }
 
 #Falcons {
