--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-	background-image: radial-gradient {silver, black};
+	background-image: radial-gradient (silver, black);
 	color: black;
 }
 
