--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,9 +7,9 @@ body {
  height: 30px;	
  overflow: hidden;
  position: relative;
- background: silver;
+ background: white;
  color: black;
- border: 1px solid silver;
+ border: 1px solid white;
 }
 .marquee p {
  position: absolute;
