--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,3 +68,11 @@ h1{
 #main {
 	width: 100%;
 }
+
+#ratings {
+	position: absolute;
+	top: 800px; 
+	right: 500px;
+	width: 50px;
+	height: 50px;
+}
