--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body {
 	background-color: black; 
-	background-image: url("https://s-media-cache-ak0.pinimg.com/originals/5a/76/05/5a7605f0f41832f222cff8c50eeea286.jpg");
+	background-image: url("http://i.imgur.com/3ZloVPt.jpg");
 	color: white;
 	min-width: 1000px;
 	min-height: 1000px;
