REPEAT PLS STOP

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,7 @@ body {
 	background-size:cover;
 	background-position:center;
 	background-image: url("http://i.imgur.com/3ZloVPt.jpg");
+	background-repeat: no-repeat;
 	color: white;
 	min-width: 1000px;
 	min-height: 1000px;
