--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,8 @@ body {
  border: 1px solid white;
 }
 .marquee p {
- position: absolute;
+ position: fixed;
+ top: 0px;
  width: 100%;
  height: 100%;
  margin: 0;
