--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-	background-color: black; 
+	background-color: black;
 	background-size:cover;
 	background-position:center;
 	background-image: url("http://i.imgur.com/3ZloVPt.jpg");
@@ -11,26 +11,25 @@ body {
 }
 
 .marquee {
- height: 30px;	
+ height: 30px;
  overflow: hidden;
- position: fixed;
- background: white;
+ position: relative;
+ background-color: white;
  color: black;
  border: 1px solid white;
 }
 .marquee p {
- position: fixed;
- top: 0px;
- width: 100%;
+ position: relative;
+ width: 80%;
  height: 100%;
  margin: 0;
  line-height: 50px;
  text-align: center;
  /* Starting position */
  -moz-transform:translateX(100%);
- -webkit-transform:translateX(100%);	
+ -webkit-transform:translateX(100%);
  transform:translateX(100%);
- /* Apply animation to this element */	
+ /* Apply animation to this element */
  -moz-animation: scroll-left 20s linear infinite;
  -webkit-animation: scroll-left 20s linear infinite;
  animation: scroll-left 20s linear infinite;
@@ -45,15 +44,15 @@ body {
  100% { -webkit-transform: translateX(-100%); }
 }
 @keyframes scroll-left {
- 0%   { 
+ 0%   {
  -moz-transform: translateX(100%); /* Browser bug fix */
  -webkit-transform: translateX(100%); /* Browser bug fix */
- transform: translateX(100%); 		
+ transform: translateX(100%);
  }
- 100% { 
+ 100% {
  -moz-transform: translateX(-100%); /* Browser bug fix */
  -webkit-transform: translateX(-100%); /* Browser bug fix */
- transform: translateX(-100%); 
+ transform: translateX(-100%);
  }
 }
 
@@ -84,7 +83,7 @@ h1{
 
 #NFCNorth {
 	position: absolute;
-	top: 500px; 
+	top: 500px;
 	right: 800px;
 }
 
@@ -96,7 +95,7 @@ h1{
 
 #ratings {
 	position: absolute;
-	top: 800px; 
+	top: 800px;
 	right: 500px;
 	width: 50px;
 	height: 50px;
