--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,52 +10,6 @@ body {
 	max-width: 1273px;
 }
 
-.marquee {
- height: 30px;
- overflow: hidden;
- position: relative;
- background-color: white;
- color: black;
- border: 1px solid white;
-}
-.marquee p {
- position: relative;
- width: 80%;
- height: 100%;
- margin: 0;
- line-height: 50px;
- text-align: center;
- /* Starting position */
- -moz-transform:translateX(100%);
- -webkit-transform:translateX(100%);
- transform:translateX(100%);
- /* Apply animation to this element */
- -moz-animation: scroll-left 20s linear infinite;
- -webkit-animation: scroll-left 20s linear infinite;
- animation: scroll-left 20s linear infinite;
-}
-/* Move it (define the animation) */
-@-moz-keyframes scroll-left {
- 0%   { -moz-transform: translateX(100%); }
- 100% { -moz-transform: translateX(-100%); }
-}
-@-webkit-keyframes scroll-left {
- 0%   { -webkit-transform: translateX(100%); }
- 100% { -webkit-transform: translateX(-100%); }
-}
-@keyframes scroll-left {
- 0%   {
- -moz-transform: translateX(100%); /* Browser bug fix */
- -webkit-transform: translateX(100%); /* Browser bug fix */
- transform: translateX(100%);
- }
- 100% {
- -moz-transform: translateX(-100%); /* Browser bug fix */
- -webkit-transform: translateX(-100%); /* Browser bug fix */
- transform: translateX(-100%);
- }
-}
-
 #Falcons {
 	position: absolute;
 	top: 0px;
@@ -75,23 +29,17 @@ h1{
 #main {
 	width: 100%;
 }
-#AFCEast{
+#AFC {
 	position: absolute;
-	top : 500px;
-	right: 0px;
-}
-
-#NFCNorth {
-	position: absolute;
-	top: 500px;
+	top: 600px;
 	right: 800px;
 }
 
-#AFCWest {
+#NFC {
 	position: absolute;
-	top: 500px;
-	right: 0px;
-}
+	top: 600px;
+	right: 0 px;
+	
 
 #ratings {
 	position: absolute;
